Added 5 section tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Gruppe 2</title>
 </head>
 <body>
+<section></section>
+<section></section>
+<section></section>
+<section></section>
+<section></section>
 
 </body>
 </html>
