Added section class + <p> tag

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
 <section></section>
 <section></section>
-<section></section>
+
+<section class="Andreas">
+<p>Hej, jeg hedder Andreas, er 26 år gammel og bor på Frederiksberg. Det er mit første semester på IT-arkitektur.  </p>
+</section>
 <section></section>
 <section></section>
 
