added section class h1 ul and li tags

--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 <section></section>
 <section></section>
 <section></section>
-<section></section>
+<section class="Mathias">
+<h1> Mig </h1>
+ <ul>
+ <li> Navn: Mathias </li>
+ <li> Alder: 23 </li>
+ <li> Fra Stenløse </li>
+ <li> Første semester </li>
+
+ </ul>
+
+
+</section>
 
 </body>
 </html>
