--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <section></section>
 <section></section>
 <section></section>
-<section></section>
+<section class="Nikoleta">
+    <div>
+        <p>
+            Hej jeg hedder Nikoleta og jeg er 23 år. Dette er mit 1 semester på KEA.
+        </p>
+    </div>
+</section>
 <section></section>
 
 </body>
