css link til stylesheet sat ind, css opdateret i #AndreasRG-Sektion samt HTML #AndreasRG-Sektion

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Gruppe 2</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<section></section>
+<section id="AndreasRG-Sektion">
+    <h2>Andreas Révész Gudmann, 21</h2>
+    <p>Hej jeg er Andreas, jeg er 21 år og går på <a href="https://kea.dk">KEA</a> på IT-arkitektur.</p>
+</section>
 <section></section>
 <section></section>
 <section></section>
