--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <section class="Andreas">
 <p>Hej, jeg hedder Andreas, er 26 år gammel og bor på Frederiksberg. Det er mit første semester på IT-arkitektur.  </p>
 </section>
-<section></section>
+<section class="Nikoleta">
+    <p>Hej,  jeg hedder Nikoleta og er 23 år. Dette er mit første semester på IT-atkiektur</p>
+</section>
 <section class="Mathias">
 <h1> Mig </h1>
  <ul>
