--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 
 
-<section>
-    class="alma"
+<section class="alma">
+
 <p>
     Mit navn er Alma. jeg kommer fra frb. jeg holder med arsenal.
 </p>
